# FAMACHA_APP_DESKTOP

./: Famach.kv  README.md  app.py  index.py  pyproject.toml  requeriments.txt
FAMACHAPP/: pyvenv.cfg
FAMACHAPP/Files/: Famach.kv  index.py
FAMACHAPP/Scripts/: activate  activate.bat  garden  rst2html.py  rst2html4.py  rst2html5.py  rst2latex.py  rst2man.py  rst2odt.py  rst2odt_prepstyles.py  rst2pseudoxml.py  rst2s5.py  rst2xetex.py  rst2xml.py  rstpep2html.py
Files/: Famach.kv  index.py  setup.py
Files/backend/: seg_model.py
Files/backend.egg-info/: PKG-INFO  SOURCES.txt
Files/src/: clas_model.py  famacha.py  seg_model.py
Files/src/model_classific/: extrac_features.py
lixo/backend.egg-info/: requires.txt
src/: __init__.py  classify.py  crop.py  export.py  extract.py  fetch.py  seg_model.py  segment.py  use_models.py
src/models/: RF.pkl
telas do App - Desktop/: Cores Desktop.txt
